--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
 
     <div class="container">
-        <label for="initial-price" class="label-style"> Initial Price : </label>
+        <label for="initial-price" class="label-style"> Initial Stock Price : </label>
         <input type="number" name="initial-price" class="inp-style" id="intial-price">
 
         <label for="units" class="label-style"> No of stocks : </label>
         <input type="number" name="units" class="inp-style" id="units">
 
 
-        <label for="current-price" class="label-style"> Current Price : </label>
+        <label for="current-price" class="label-style"> Current Stock Price : </label>
         <input type="number" name="current-price" class="inp-style" id="current-price">
 
-        <button type="submit">Show me</button>
+        <button type="submit" id="submit">Show me</button>
+        <button type="reset" id="reset">reset</button>
 
         <div class="result">
 
